Distorted design issue #1147

--- a/public/css/style.default.css
+++ b/public/css/style.default.css
@@ -24039,7 +24039,6 @@ contenthover a {
 .meet-team-v1 .bio {
   padding-bottom: 5px;
   text-align: center;
-  width: 95%;
 }
 .meet-team-v1 .profile-img {
   max-width: 230px;
