--- a/public/css/style.default_part_2.css
+++ b/public/css/style.default_part_2.css
@@ -9389,7 +9389,6 @@ contenthover a {
 .meet-team-v1 .bio {
   padding-bottom: 5px;
   text-align: center;
-  width: 95%;
 }
 
 .meet-team-v1 .profile-img {
